# lab_05.4

./: CMakeLists.txt  index  main  main.cpp
include/: main.h
src/: h.cpp  main.cpp
tests/: test_h.cpp
